# agrorob_visualization

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
agrorob_urdf/: state_publisher.py
agrorob_visualization/: state_publisher.py
config/: joint_names_agrorob-simplified-assem.yaml
include/agrorob_visualization/: agrorob_state_publisher.hpp  kinematics.hpp
launch/: agrorob_rviz.launch.py  display.launch  gazebo.launch
meshes/: Wheel_FL.STL  shin_FL.STL  shin_FR.STL  shin_RL.STL  shin_RR.STL  wheel_FR.STL  wheel_RL.STL  wheel_RR.STL
src/: agrorob_state_publisher.cpp  agrorob_state_publisher_node.cpp  kinematics.cpp  main.cpp
urdf/: agrorob-simplified-assem.urdf  agrorob_urdf.csv  agrorob_urdf.rviz  agrorob_urdf.urdf  agrorob_visualization.csv  agrorob_visualization.rviz  agrorob_visualization.urdf
